# eventstore

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
apps/common/: kafka.py  middleware.py  models.py  outbox.py  tasks.py  throttles.py
apps/common/management/commands/: run_analytics_consumer.py
apps/common/migrations/: 0001_initial.py  0002_outboxevent_processedevent.py
apps/customers/: admin.py  models.py  serializers.py  urls.py  views.py
apps/customers/migrations/: 0001_initial.py
apps/inventory/: admin.py  allocation.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py
apps/orders/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  prod.py
docker/: entrypoint.sh
infra/grafana/provisioning/dashboards/: dashboards.yml  eventshop-overview.json
infra/prometheus/: prometheus.yml
tests/: conftest.py  test_allocation.py  test_api.py  test_bootstrap.py  test_models.py  test_rate_limiter.py  test_streaming.py  test_tasks.py
